--- a/resources/application.properties
+++ b/resources/application.properties
@@ -52,5 +52,6 @@ report.log.skip.success=0
 
 #remove from comment and set eclipse/intellij if you are using perfecto lab plugin 
 #driver.pluginType=eclipse 
+#TODO
 #applitools key
 applitools_key=
